--- a/aggregate_tmy_mean.ipynb
+++ b/aggregate_tmy_mean.ipynb
@@ -2,30 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "d655cc89",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: hs_endpoint=https://developer.nrel.gov/api/hsds\n",
-      "env: hs_api_key=tmhsEBYW3KWbaOyMWECph51LOGnVIAcOxEAzbZgA\n",
-      "env: hs_username=None\n",
-      "env: hs_password=None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# use remote s3 datasets instead of locally stored tmy h5 file\n",
-    "#!pip install pyspark\n",
-    "%env hs_endpoint = https://developer.nrel.gov/api/hsds\n",
-    "%env hs_api_key = tmhsEBYW3KWbaOyMWECph51LOGnVIAcOxEAzbZgA\n",
-    "%env hs_username = None\n",
-    "%env hs_password = None\n",
-    "\n",
-    "\n",
     "import h5pyd\n",
     "import h5py\n",
     "import numpy as np\n",
@@ -38,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "id": "9250c0a6",
    "metadata": {},
    "outputs": [
@@ -77,7 +58,7 @@
        " 'wind_speed']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,29 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b88d4ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get coordinates in USA only (2018392 items -> 546219 items)\n",
-    "meta = pd.DataFrame(f['meta'][...])\n",
-    "\n",
-    "USA = meta.loc[meta['country'] == b'United States'] # Note .h5 saves strings as bit-strings\n",
-    "USA.head()\n",
-    "\n",
-    "# Keep 'elevation' and 'state' as well. They may be useful later.\n",
-    "df_coord_usa = USA[['latitude', 'longitude', 'elevation', 'state']].copy()\n",
-    "df_coord_usa.shape\n",
-    "df_coord_usa.head(600000)\n",
-    "\n",
-    "# dset = f['ghi']\n",
-    "# data = dset[0][USA.index]  # full-resolution subset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "2e9769f7",
    "metadata": {},
    "outputs": [],
@@ -187,143 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4284a452",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree = cKDTree(dset_coords)\n",
-    "def nearest_site(tree, lat_coord, lon_coord):\n",
-    "    lat_lon = np.array([lat_coord, lon_coord])\n",
-    "    dist, pos = tree.query(lat_lon)\n",
-    "    return pos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6aaaaa49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dset_coords = f['coordinates'][...]\n",
-    "\n",
-    "dset_names = \\\n",
-    "['air_temperature',\n",
-    " 'alpha',\n",
-    " 'aod',\n",
-    " 'asymmetry',\n",
-    " 'cld_opd_dcomp',\n",
-    " 'cld_reff_dcomp',\n",
-    " 'clearsky_dhi',\n",
-    " 'clearsky_dni',\n",
-    " 'clearsky_ghi',\n",
-    " 'cloud_press_acha',\n",
-    " 'cloud_type',\n",
-    " 'dew_point',\n",
-    " 'dhi',\n",
-    " 'dni',\n",
-    " 'ghi',\n",
-    " 'ozone',\n",
-    " 'relative_humidity',\n",
-    " 'solar_zenith_angle',\n",
-    " 'ssa',\n",
-    " 'surface_albedo',\n",
-    " 'surface_pressure',\n",
-    " 'total_precipitable_water',\n",
-    " 'wind_direction',\n",
-    " 'wind_speed']\n",
-    "\n",
-    "def agg_on_coord(ploc):\n",
-    "    ploc_idx = nearest_site(tree, ploc[0], ploc[1] )\n",
-    "    #print(ploc_idx)\n",
-    "    #print(dset_coords[ploc_idx])\n",
-    "\n",
-    "    # df = pd.DataFrame(f['meta'][...])\n",
-    "    # df['ghi'] = data / dset.attrs['psm_scale_factor']\n",
-    "\n",
-    "    dict_result = {}\n",
-    "\n",
-    "    dict_result['adj_latitude'] = dset_coords[ploc_idx][0]\n",
-    "    dict_result['adj_longitude'] = dset_coords[ploc_idx][1]\n",
-    "\n",
-    "    # get mean of yearly aggregated fields\n",
-    "    for field in dset_names:\n",
-    "#        print(field)\n",
-    "        dset = f[field]\n",
-    "        dict_result['avg_' + field] = np.mean(dset[::1,ploc_idx] / dset.attrs['psm_scale_factor'])\n",
-    "\n",
-    "    # get std dev of yearly aggregated fields\n",
-    "    for field in dset_names:\n",
-    "        dset = f[field]\n",
-    "        dict_result['std_' + field] = np.std(dset[::1,ploc_idx] / dset.attrs['psm_scale_factor'])\n",
-    "\n",
-    "    df = pd.DataFrame([dict_result])\n",
-    "    return df\n",
-    "\n",
-    "df = agg_on_coord((44.3142,-89.8964))\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "267e2147",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def data_wrangling(filepath):\n",
-    "    with open(filepath, 'r', encoding='utf-8') as f:\n",
-    "        reader = csv.reader(f)\n",
-    "        table = list()\n",
-    "        # Feel free to add any additional variables\n",
-    "        \n",
-    "        ...\n",
-    "        \n",
-    "        # Read in the header\n",
-    "        for header in reader:\n",
-    "            break\n",
-    "        \n",
-    "        # Read in each row\n",
-    "        df_orig = None\n",
-    "        df_agg = None\n",
-    "        i = 0\n",
-    "        for row in reader:\n",
-    "            print(row[3] + ', ' + row[4])\n",
-    "            coord = (row[3], row[4])\n",
-    "            \n",
-    "            if df_agg is None:\n",
-    "                df_orig = pd.DataFrame([row], columns = header)\n",
-    "                df_agg = agg_on_coord(coord)\n",
-    "            else:\n",
-    "                df_orig = pd.concat([df_orig, pd.DataFrame([row], columns = header)], axis=0)\n",
-    "                df_agg = pd.concat([df_agg, agg_on_coord(coord)], axis=0)\n",
-    "            \n",
-    "            table.append(row)\n",
-    "            \n",
-    "            # Only read first 100 data rows - [2 points] Q5.a\n",
-    "#             if i==5:\n",
-    "#                 break\n",
-    "#             i = i+1\n",
-    "        \n",
-    "        # concat original cols and agg columns horizontally\n",
-    "        df = pd.concat([df_orig, df_agg], axis=1)\n",
-    "\n",
-    "    return header, table, df\n",
-    "\n",
-    "header, table, df = data_wrangling('dataset/us_powerplants_orig_solar.csv')\n",
-    "df.to_csv('dataset/us_powerplants_new_solar.csv')\n",
-    "\n",
-    "header, table, df = data_wrangling('dataset/us_powerplants_orig_wind.csv')\n",
-    "df.to_csv('dataset/us_powerplants_new_wind.csv')\n",
-    "\n",
-    "df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "c96dbd40",
    "metadata": {},
    "outputs": [],
@@ -367,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "05f48444",
    "metadata": {},
    "outputs": [],
@@ -484,90 +307,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "396ea55f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def data_wrangling2(filepath):\n",
-    "    \"\"\"\n",
-    "    Function to calculate wind and temperature bands and wind power density for all plants in csv file.\n",
-    "    :filepath: path to file as string\n",
-    "    :return: pandas dataframe containing the wind and temperature bands and wind power density of all plants\n",
-    "    \"\"\"\n",
-    "    # Open the data file\n",
-    "    with open(filepath, 'r', encoding='utf-8') as f:\n",
-    "        # Read the data\n",
-    "        reader = csv.reader(f)\n",
-    "        \n",
-    "        # Discard the header row\n",
-    "        for header in reader:\n",
-    "            break\n",
-    "        \n",
-    "        # df_orig will hold the original power plant columns we are not editing\n",
-    "        df_orig = None\n",
-    "        \n",
-    "        # df_agg will hold the new data we are calculating\n",
-    "        df_agg = None\n",
-    "        \n",
-    "        # Read in each row \n",
-    "        # Note the header row was discarded above\n",
-    "        for row in reader:\n",
-    "            \n",
-    "            # Get the latitude and longitude for the plant we need\n",
-    "            coord = (row[3], row[4])\n",
-    "            \n",
-    "            # If first row\n",
-    "            if df_agg is None:\n",
-    "                # Add original data for the plant\n",
-    "                df_orig = pd.DataFrame([row], columns = header)\n",
-    "                \n",
-    "                # Get data for first row\n",
-    "                df_agg = get_additional_variables(coord)\n",
-    "                \n",
-    "            else:\n",
-    "                # Add original data for the plant\n",
-    "                df_orig = pd.concat([df_orig, pd.DataFrame([row], columns = header)], axis=0)\n",
-    "                \n",
-    "                # Get data for row\n",
-    "                df_agg = pd.concat([df_agg, get_additional_variables(coord)], axis=0)\n",
-    "\n",
-    "        # Concat original cols and agg columns horizontally\n",
-    "        df = pd.concat([df_orig, df_agg], axis=1)\n",
-    "\n",
-    "    return df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6a25de2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get wind and temperature band data and wind power density for solar plants\n",
-    "df = data_wrangling2('dataset/us_powerplants_orig_solar.csv')\n",
-    "\n",
-    "# Save solar data to csv\n",
-    "df.to_csv('dataset/us_powerplants_new_solar2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eac20359",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get wind and temperature band data and wind power density for wind plants\n",
-    "df = data_wrangling2('dataset/us_powerplants_orig_wind.csv')\n",
-    "\n",
-    "# Save wind data to csv\n",
-    "df.to_csv('dataset/us_powerplants_new_wind2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "fa2e09bf",
    "metadata": {},
    "outputs": [
@@ -577,77 +316,9 @@
      "text": [
       "546219 coordinates in the US\n",
       "processing... air_temperature\n",
-      "CPU times: user 20.7 s, sys: 29.8 s, total: 50.6 s\n",
-      "Wall time: 2min 9s\n",
-      "processing... alpha\n",
-      "CPU times: user 21.1 s, sys: 17.1 s, total: 38.2 s\n",
-      "Wall time: 17min 34s\n",
-      "processing... aod\n",
-      "CPU times: user 23.2 s, sys: 48.2 s, total: 1min 11s\n",
-      "Wall time: 24min 4s\n",
-      "processing... asymmetry\n",
-      "CPU times: user 21.1 s, sys: 17.2 s, total: 38.3 s\n",
-      "Wall time: 13min 20s\n",
-      "processing... cld_opd_dcomp\n",
-      "CPU times: user 22.9 s, sys: 49.9 s, total: 1min 12s\n",
-      "Wall time: 39min 55s\n",
-      "processing... cld_reff_dcomp\n",
-      "CPU times: user 23.3 s, sys: 48.3 s, total: 1min 11s\n",
-      "Wall time: 49min 58s\n",
-      "processing... clearsky_dhi\n",
-      "CPU times: user 23.4 s, sys: 48.3 s, total: 1min 11s\n",
-      "Wall time: 38min 27s\n",
-      "processing... clearsky_dni\n",
-      "CPU times: user 22.4 s, sys: 48.3 s, total: 1min 10s\n",
-      "Wall time: 46min 18s\n",
-      "processing... clearsky_ghi\n",
-      "CPU times: user 23.6 s, sys: 49.6 s, total: 1min 13s\n",
-      "Wall time: 56min 17s\n",
-      "processing... cloud_press_acha\n",
-      "CPU times: user 23.9 s, sys: 47.5 s, total: 1min 11s\n",
-      "Wall time: 52min 48s\n",
-      "processing... cloud_type\n",
-      "CPU times: user 21.1 s, sys: 17.8 s, total: 38.9 s\n",
-      "Wall time: 20min 34s\n",
-      "processing... dew_point\n",
-      "CPU times: user 24.4 s, sys: 52.8 s, total: 1min 17s\n",
-      "Wall time: 51min 1s\n",
-      "processing... dhi\n",
-      "CPU times: user 23.3 s, sys: 49.6 s, total: 1min 12s\n",
-      "Wall time: 55min 39s\n",
-      "processing... dni\n",
-      "CPU times: user 24.7 s, sys: 46.9 s, total: 1min 11s\n",
-      "Wall time: 50min 2s\n",
-      "processing... ghi\n",
-      "CPU times: user 21.7 s, sys: 43.6 s, total: 1min 5s\n",
-      "Wall time: 7min 24s\n",
-      "processing... ozone\n",
-      "CPU times: user 24.4 s, sys: 46.9 s, total: 1min 11s\n",
-      "Wall time: 49min 26s\n",
-      "processing... relative_humidity\n",
-      "CPU times: user 25.2 s, sys: 46.6 s, total: 1min 11s\n",
-      "Wall time: 43min 25s\n",
-      "processing... solar_zenith_angle\n",
-      "CPU times: user 23.7 s, sys: 47.8 s, total: 1min 11s\n",
-      "Wall time: 42min 51s\n",
-      "processing... ssa\n",
-      "CPU times: user 22.1 s, sys: 17.8 s, total: 39.9 s\n",
-      "Wall time: 30min 55s\n",
-      "processing... surface_albedo\n",
-      "CPU times: user 21.6 s, sys: 23.8 s, total: 45.4 s\n",
-      "Wall time: 26min 30s\n",
-      "processing... surface_pressure\n",
-      "CPU times: user 23.8 s, sys: 51.8 s, total: 1min 15s\n",
-      "Wall time: 31min 30s\n",
-      "processing... total_precipitable_water\n",
-      "CPU times: user 21.4 s, sys: 15.6 s, total: 37 s\n",
-      "Wall time: 25min 52s\n",
-      "processing... wind_direction\n",
-      "CPU times: user 24.8 s, sys: 52.5 s, total: 1min 17s\n",
-      "Wall time: 47min 42s\n",
-      "processing... wind_speed\n",
-      "CPU times: user 24.8 s, sys: 50 s, total: 1min 14s\n",
-      "Wall time: 47min 7s\n"
+      "CPU times: user 7.82 s, sys: 13.3 s, total: 21.1 s\n",
+      "Wall time: 21.1 s\n",
+      "processing... alpha\n"
      ]
     }
    ],
@@ -698,7 +369,8 @@
     "# Keep 'elevation' and 'state' as well. They may be useful later.\n",
     "df_coord_usa = USA[['latitude', 'longitude', 'elevation', 'state']].copy()\n",
     "df_coord_usa.shape\n",
-    "df_coord_usa = df_coord_usa.reset_index()\n",
+    "original_us_indice = df_coord_usa.index.copy()\n",
+    "\n",
     "#print(df_coord_usa.head(50))\n",
     "total_no_str = str(len(df_coord_usa.index))\n",
     "print (total_no_str + ' coordinates in the US')\n",
@@ -707,17 +379,17 @@
     "df = None\n",
     "for dset_name in dset_names:\n",
     "    %time mean_dset = get_yearly_variables(dset_name)\n",
-    "    mean_dset_us = np.take(mean_dset, df_coord_usa.index)\n",
+    "    mean_dset_us = mean_dset[original_us_indice]\n",
     "    #std_dset_us = np.take(std_dset, df_coord_usa.index)\n",
-    "    df_mean_dset_us = pd.DataFrame(mean_dset_us)\n",
+    "    df_mean_dset_us = pd.DataFrame(mean_dset_us, columns=['avg_' + dset_name])\n",
     "    \n",
     "    if df is None:\n",
-    "        df = pd.concat([df_coord_usa, df_mean_dset_us], axis=1)\n",
+    "        df = pd.concat([df_coord_usa.reset_index(), df_mean_dset_us], axis=1)\n",
     "    else:\n",
     "        df = pd.concat([df, df_mean_dset_us], axis=1)\n",
     "        \n",
     "# Save into csv\n",
-    "df.to_csv('dataset/yearly_variables_us_coordinates.csv')\n"
+    "df.to_csv('dataset/yearly_variables_us_coordinates_mean.csv')\n"
    ]
   },
   {
